Fixed glitch where hands visibly reverse to get back to starting position

--- a/styles.css
+++ b/styles.css
@@ -41,37 +41,27 @@
 
   .hand {
     width: 50%;
-    height: 5px;
-    position: absolute;
-    
-    transform: rotate(90deg);
 
+    position: absolute;
+    top: 50%;
+
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.05s;
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
   }
 
   .hour-hand {
-    width: 30%;
-    top: 46.3%;
+    height: 5px;
     background: #C70084;
-
-    transition: all 0.05s;
-    transform-origin: 132.5%;
   }
 
-  .min-hand {
-    top: 49.5%;
+  .minute-hand {
+    height: 5px;
     background: #000000;
-
-    transition: all 0.05s;
-    transform-origin: 99%;
   }
 
   .second-hand {
-    width: 50%;
-    height: 2px;
-    top: 50%;
+    height: 3px;
     background: #000000;
-
-    transition: all 0.05s;
-    transform-origin: 99%;
   }
